(feat) character selection!
.... kinda works... sometimes

--- a/BSVBattleRoyale/Other/Base.lproj/LaunchScreen.storyboard
+++ b/BSVBattleRoyale/Other/Base.lproj/LaunchScreen.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,7 +15,20 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="title" translatesAutoresizingMaskIntoConstraints="NO" id="RNU-L9-MaN">
+                                <rect key="frame" x="20" y="261" width="374" height="374"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="RNU-L9-MaN" secondAttribute="height" id="HKL-VW-I5H"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" name="MenuColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="RNU-L9-MaN" secondAttribute="trailing" constant="20" id="GCn-Ju-AzU"/>
+                            <constraint firstItem="RNU-L9-MaN" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="g3C-oF-6Fz"/>
+                            <constraint firstItem="RNU-L9-MaN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="siX-X5-Tje"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -23,4 +37,10 @@
             <point key="canvasLocation" x="642" y="329"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="title" width="359.5" height="242"/>
+        <namedColor name="MenuColor">
+            <color red="0.23403532803058624" green="0.57048231363296509" blue="0.79746943712234497" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
