--- a/BSVBattleRoyale/Other/Base.lproj/Main.storyboard
+++ b/BSVBattleRoyale/Other/Base.lproj/Main.storyboard
@@ -77,14 +77,14 @@
                                 <rect key="frame" x="20" y="824" width="374" height="38"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JNo-3n-WW4">
-                                        <rect key="frame" x="0.0" y="0.0" width="310" height="38"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="321" height="38"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aSv-Kd-evZ">
-                                        <rect key="frame" x="318" y="0.0" width="56" height="38"/>
+                                        <rect key="frame" x="329" y="0.0" width="45" height="38"/>
                                         <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
-                                        <state key="normal" title="Send"/>
+                                        <state key="normal" title="Say"/>
                                         <connections>
                                             <action selector="chatSendPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="o8w-s4-BJa"/>
                                         </connections>
