(fix) storyboard module fix

--- a/BSVBattleRoyale/SignIn With Apple Scene/Login.storyboard
+++ b/BSVBattleRoyale/SignIn With Apple Scene/Login.storyboard
@@ -12,7 +12,7 @@
         <!--Sign In With Apple View Controller-->
         <scene sceneID="fng-uD-0yU">
             <objects>
-                <viewController id="HqL-B6-ywn" customClass="SignInWithAppleViewController" customModule="BSVBattleRoyale" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="HqL-B6-ywn" customClass="SignInWithAppleViewController" customModule="DungeonBattleRoyale" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="n1H-KT-EoJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -83,7 +83,7 @@
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AvatarCell" id="iiP-UI-OhM" customClass="AvatarCollectionViewCell" customModule="BSVBattleRoyale" customModuleProvider="target">
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AvatarCell" id="iiP-UI-OhM" customClass="AvatarCollectionViewCell" customModule="DungeonBattleRoyale" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="160" height="160"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="o9a-FO-Qv5">
